# ufds

./: LICENSE  README.md
.github/workflows/: publish-npm.yml  publish-pypi.yml  test.yml
sdk/: README.md
sdk/javascript/: package-lock.json  package.json  tsconfig.json  tsup.config.js
sdk/javascript/src/: client.js  index.d.ts  index.js
sdk/javascript/src/adapters/: ondc.js  swiggy.js  zomato.js
sdk/javascript/src/resources/: analytics.js  inventory.js  menu.js  orders.js
sdk/javascript/src/types/: openapi.d.ts
sdk/javascript/src/webhooks/: handler.js  signature.js
sdk/javascript/tests/: analytics.test.js  client.test.js  index.test.js  inventory.test.js  menu.test.js  ondc.test.js  orders.test.js  swiggy.test.js  webhooks.test.js  zomato.test.js
sdk/javascript/tests/fixtures/: ondc_on_confirm.json  ondc_on_search.json
sdk/javascript/tests/helpers/: fakeFetch.js  fixtures.js
sdk/python/: pyproject.toml
sdk/python/src/ufds_sdk/: __init__.py  client.py
sdk/python/src/ufds_sdk/resources/: analytics.py  inventory.py  menu.py  orders.py
sdk/python/src/ufds_sdk/webhooks/: handler.py  signature.py
sdk/python/tests/: test_analytics.py  test_client.py  test_inventory.py  test_menu.py  test_orders.py  test_ufds_client.py  test_webhooks.py
sdk/python/tests/helpers/: fake_transport.py  fixtures.py
ufds-spec/api/: ufds_v1.0_openapi.yaml
ufds-spec/docs/: UFDS_v1.0_Specification.docx
ufds-spec/examples/: analytics_response.json  inventory_bulk_update.json  menu_full.json  order_cancelled.json  order_new.json  order_status_update.json
(+1 files in other folders)
